--- a/test/test.html
+++ b/test/test.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title></title>
-        <base href="/"/>
-        <meta charset="UTF-8"/>
-        <meta name="lzsoft-api-url" content="http://localhost:8080"/>
-        <!-- -->
-        <link rel="import" href="../multi.language.input.html"/>
-    </head>
-    <body>
-        <multi-language-input data-type="input"></multi-language-input>
-    </body>
+
+<head>
+    <title></title>
+    <base href="/" />
+    <meta charset="UTF-8" />
+    <meta name="lzsoft-api-url" content="http://localhost:8080" />
+    <!-- -->
+    <link rel="import" href="/multi.language.input/multi.language.input.html" />
+</head>
+
+<body>
+    <multi-language-input data-type="input"></multi-language-input>
+</body>
+
 </html>
