--- a/multi-language-input.html
+++ b/multi-language-input.html
@@ -1,10 +1,10 @@
 <template>
-    <input type="text" />
+    <input type="text">
     <textarea></textarea>
     <select>
         <option value="en">English</option>
         <option value="zh-Hans">简体中文</option>
     </select>
 </template>
-<script type="text/javascript" src="multi-language-input.js"></script>
-<link rel="stylesheet" type="text/css" href="multi-language-input.css" />
+<script type="text/javascript" src="src/multi-language-input.js"></script>
+<link rel="stylesheet" type="text/css" href="src/multi-language-input.css">
