--- a/multi-language-input.html
+++ b/multi-language-input.html
@@ -6,5 +6,5 @@
         <option value="zh-Hans">简体中文</option>
     </select>
 </template>
-<script type="text/javascript" src="src/multi-language-input.js"></script>
-<link rel="stylesheet" type="text/css" href="src/multi-language-input.css">
+<script src="src/multi-language-input.js"></script>
+<link rel="stylesheet" href="src/multi-language-input.css">
