--- a/min/multi-language-input.html
+++ b/min/multi-language-input.html
@@ -6,5 +6,5 @@
         <option value="zh-Hans">简体中文</option>
     </select>
 </template>
-<script src="src/multi-language-input.js"></script>
-<link rel="stylesheet" href="src/multi-language-input.css">
+<script src="multi-language-input.js"></script>
+<link rel="stylesheet" href="multi-language-input.css">
